# axum-docker-compose-sqlx

./: README.md  docker-compose.dev.yml  docker-compose.yml
adcs-example/: .env  Cargo.toml  Dockerfile  dev.Dockerfile
adcs-example/.sqlx/: query-416e54ce2888ed034868730d21fcf1134a297c21737f9ec50f92d32d5f231fcf.json
adcs-example/src/: main.rs
