[package]
name = "adcs-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
axum = { version = "0.6.20", features = ["macros"] }
dotenvy = "0.15"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "time",
] }
